Parser/FreedomLessLessParser.cpp

// Generated from FreedomLessLess.g4 by ANTLR 4.7.1


#include "FreedomLessLessListener.h"

#include "FreedomLessLessParser.h"


using namespace antlrcpp;
using namespace antlr4;

FreedomLessLessParser::FreedomLessLessParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FreedomLessLessParser::~FreedomLessLessParser() {
  delete _interpreter;
}

std::string FreedomLessLessParser::getGrammarFileName() const {
  return "FreedomLessLess.g4";
}

const std::vector<std::string>& FreedomLessLessParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FreedomLessLessParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Program_defContext ------------------------------------------------------------------

FreedomLessLessParser::Program_defContext::Program_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FreedomLessLessParser::Import_defContext* FreedomLessLessParser::Program_defContext::import_def() {
  return getRuleContext<FreedomLessLessParser::Import_defContext>(0);
}

std::vector<FreedomLessLessParser::Class_defContext *> FreedomLessLessParser::Program_defContext::class_def() {
  return getRuleContexts<FreedomLessLessParser::Class_defContext>();
}

FreedomLessLessParser::Class_defContext* FreedomLessLessParser::Program_defContext::class_def(size_t i) {
  return getRuleContext<FreedomLessLessParser::Class_defContext>(i);
}

std::vector<FreedomLessLessParser::Function_defContext *> FreedomLessLessParser::Program_defContext::function_def() {
  return getRuleContexts<FreedomLessLessParser::Function_defContext>();
}

FreedomLessLessParser::Function_defContext* FreedomLessLessParser::Program_defContext::function_def(size_t i) {
  return getRuleContext<FreedomLessLessParser::Function_defContext>(i);
}

FreedomLessLessParser::Main_defContext* FreedomLessLessParser::Program_defContext::main_def() {
  return getRuleContext<FreedomLessLessParser::Main_defContext>(0);
}


size_t FreedomLessLessParser::Program_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleProgram_def;
}

void FreedomLessLessParser::Program_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_def(this);
}

void FreedomLessLessParser::Program_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_def(this);
}

FreedomLessLessParser::Program_defContext* FreedomLessLessParser::program_def() {
  Program_defContext *_localctx = _tracker.createInstance<Program_defContext>(_ctx, getState());
  enterRule(_localctx, 0, FreedomLessLessParser::RuleProgram_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FreedomLessLessParser::IMPORT) {
      setState(62);
      import_def();
    }
    setState(68);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(65);
        class_def(); 
      }
      setState(70);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(74);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        function_def(); 
      }
      setState(76);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FreedomLessLessParser::VOID_T) {
      setState(77);
      main_def();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_defContext ------------------------------------------------------------------

FreedomLessLessParser::Import_defContext::Import_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Import_defContext::IMPORT() {
  return getTokens(FreedomLessLessParser::IMPORT);
}

tree::TerminalNode* FreedomLessLessParser::Import_defContext::IMPORT(size_t i) {
  return getToken(FreedomLessLessParser::IMPORT, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Import_defContext::STRING() {
  return getTokens(FreedomLessLessParser::STRING);
}

tree::TerminalNode* FreedomLessLessParser::Import_defContext::STRING(size_t i) {
  return getToken(FreedomLessLessParser::STRING, i);
}


size_t FreedomLessLessParser::Import_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleImport_def;
}

void FreedomLessLessParser::Import_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_def(this);
}

void FreedomLessLessParser::Import_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_def(this);
}

FreedomLessLessParser::Import_defContext* FreedomLessLessParser::import_def() {
  Import_defContext *_localctx = _tracker.createInstance<Import_defContext>(_ctx, getState());
  enterRule(_localctx, 2, FreedomLessLessParser::RuleImport_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      match(FreedomLessLessParser::IMPORT);
      setState(81);
      match(FreedomLessLessParser::STRING);
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FreedomLessLessParser::IMPORT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_defContext ------------------------------------------------------------------

FreedomLessLessParser::Class_defContext::Class_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FreedomLessLessParser::Class_defContext::CLASS() {
  return getToken(FreedomLessLessParser::CLASS, 0);
}

tree::TerminalNode* FreedomLessLessParser::Class_defContext::ID() {
  return getToken(FreedomLessLessParser::ID, 0);
}

tree::TerminalNode* FreedomLessLessParser::Class_defContext::OPEN_KEY() {
  return getToken(FreedomLessLessParser::OPEN_KEY, 0);
}

FreedomLessLessParser::Class_members_defContext* FreedomLessLessParser::Class_defContext::class_members_def() {
  return getRuleContext<FreedomLessLessParser::Class_members_defContext>(0);
}

tree::TerminalNode* FreedomLessLessParser::Class_defContext::CLOSE_KEY() {
  return getToken(FreedomLessLessParser::CLOSE_KEY, 0);
}


size_t FreedomLessLessParser::Class_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleClass_def;
}

void FreedomLessLessParser::Class_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_def(this);
}

void FreedomLessLessParser::Class_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_def(this);
}

FreedomLessLessParser::Class_defContext* FreedomLessLessParser::class_def() {
  Class_defContext *_localctx = _tracker.createInstance<Class_defContext>(_ctx, getState());
  enterRule(_localctx, 4, FreedomLessLessParser::RuleClass_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(FreedomLessLessParser::CLASS);
    setState(87);
    match(FreedomLessLessParser::ID);
    setState(88);
    match(FreedomLessLessParser::OPEN_KEY);
    setState(89);
    class_members_def();
    setState(90);
    match(FreedomLessLessParser::CLOSE_KEY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_members_defContext ------------------------------------------------------------------

FreedomLessLessParser::Class_members_defContext::Class_members_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FreedomLessLessParser::Private_defContext* FreedomLessLessParser::Class_members_defContext::private_def() {
  return getRuleContext<FreedomLessLessParser::Private_defContext>(0);
}

FreedomLessLessParser::Public_defContext* FreedomLessLessParser::Class_members_defContext::public_def() {
  return getRuleContext<FreedomLessLessParser::Public_defContext>(0);
}


size_t FreedomLessLessParser::Class_members_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleClass_members_def;
}

void FreedomLessLessParser::Class_members_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_members_def(this);
}

void FreedomLessLessParser::Class_members_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_members_def(this);
}

FreedomLessLessParser::Class_members_defContext* FreedomLessLessParser::class_members_def() {
  Class_members_defContext *_localctx = _tracker.createInstance<Class_members_defContext>(_ctx, getState());
  enterRule(_localctx, 6, FreedomLessLessParser::RuleClass_members_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FreedomLessLessParser::PRIVATE: {
        enterOuterAlt(_localctx, 1);
        setState(92);
        private_def();
        break;
      }

      case FreedomLessLessParser::PUBLIC: {
        enterOuterAlt(_localctx, 2);
        setState(93);
        public_def();
        setState(95);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FreedomLessLessParser::PRIVATE) {
          setState(94);
          private_def();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Public_defContext ------------------------------------------------------------------

FreedomLessLessParser::Public_defContext::Public_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FreedomLessLessParser::Public_defContext::PUBLIC() {
  return getToken(FreedomLessLessParser::PUBLIC, 0);
}

FreedomLessLessParser::Class_scope_defContext* FreedomLessLessParser::Public_defContext::class_scope_def() {
  return getRuleContext<FreedomLessLessParser::Class_scope_defContext>(0);
}


size_t FreedomLessLessParser::Public_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RulePublic_def;
}

void FreedomLessLessParser::Public_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPublic_def(this);
}

void FreedomLessLessParser::Public_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPublic_def(this);
}

FreedomLessLessParser::Public_defContext* FreedomLessLessParser::public_def() {
  Public_defContext *_localctx = _tracker.createInstance<Public_defContext>(_ctx, getState());
  enterRule(_localctx, 8, FreedomLessLessParser::RulePublic_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(FreedomLessLessParser::PUBLIC);
    setState(100);
    class_scope_def();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Private_defContext ------------------------------------------------------------------

FreedomLessLessParser::Private_defContext::Private_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FreedomLessLessParser::Private_defContext::PRIVATE() {
  return getToken(FreedomLessLessParser::PRIVATE, 0);
}

FreedomLessLessParser::Class_scope_defContext* FreedomLessLessParser::Private_defContext::class_scope_def() {
  return getRuleContext<FreedomLessLessParser::Class_scope_defContext>(0);
}


size_t FreedomLessLessParser::Private_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RulePrivate_def;
}

void FreedomLessLessParser::Private_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrivate_def(this);
}

void FreedomLessLessParser::Private_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrivate_def(this);
}

FreedomLessLessParser::Private_defContext* FreedomLessLessParser::private_def() {
  Private_defContext *_localctx = _tracker.createInstance<Private_defContext>(_ctx, getState());
  enterRule(_localctx, 10, FreedomLessLessParser::RulePrivate_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(FreedomLessLessParser::PRIVATE);
    setState(103);
    class_scope_def();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_scope_defContext ------------------------------------------------------------------

FreedomLessLessParser::Class_scope_defContext::Class_scope_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FreedomLessLessParser::Attribute_defContext *> FreedomLessLessParser::Class_scope_defContext::attribute_def() {
  return getRuleContexts<FreedomLessLessParser::Attribute_defContext>();
}

FreedomLessLessParser::Attribute_defContext* FreedomLessLessParser::Class_scope_defContext::attribute_def(size_t i) {
  return getRuleContext<FreedomLessLessParser::Attribute_defContext>(i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Class_scope_defContext::SEMICOLON() {
  return getTokens(FreedomLessLessParser::SEMICOLON);
}

tree::TerminalNode* FreedomLessLessParser::Class_scope_defContext::SEMICOLON(size_t i) {
  return getToken(FreedomLessLessParser::SEMICOLON, i);
}

std::vector<FreedomLessLessParser::Function_defContext *> FreedomLessLessParser::Class_scope_defContext::function_def() {
  return getRuleContexts<FreedomLessLessParser::Function_defContext>();
}

FreedomLessLessParser::Function_defContext* FreedomLessLessParser::Class_scope_defContext::function_def(size_t i) {
  return getRuleContext<FreedomLessLessParser::Function_defContext>(i);
}


size_t FreedomLessLessParser::Class_scope_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleClass_scope_def;
}

void FreedomLessLessParser::Class_scope_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_scope_def(this);
}

void FreedomLessLessParser::Class_scope_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_scope_def(this);
}

FreedomLessLessParser::Class_scope_defContext* FreedomLessLessParser::class_scope_def() {
  Class_scope_defContext *_localctx = _tracker.createInstance<Class_scope_defContext>(_ctx, getState());
  enterRule(_localctx, 12, FreedomLessLessParser::RuleClass_scope_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(110);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(105);
        attribute_def();
        setState(106);
        match(FreedomLessLessParser::SEMICOLON); 
      }
      setState(112);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FreedomLessLessParser::INT_T)
      | (1ULL << FreedomLessLessParser::UNSIGNED_T)
      | (1ULL << FreedomLessLessParser::FLOAT_T)
      | (1ULL << FreedomLessLessParser::DOUBLE_T)
      | (1ULL << FreedomLessLessParser::SHORT_T)
      | (1ULL << FreedomLessLessParser::CHAR_T)
      | (1ULL << FreedomLessLessParser::BOOL_T)
      | (1ULL << FreedomLessLessParser::VOID_T)
      | (1ULL << FreedomLessLessParser::CLASS))) != 0)) {
      setState(113);
      function_def();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_defContext ------------------------------------------------------------------

FreedomLessLessParser::Attribute_defContext::Attribute_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FreedomLessLessParser::Type_defContext* FreedomLessLessParser::Attribute_defContext::type_def() {
  return getRuleContext<FreedomLessLessParser::Type_defContext>(0);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::ID() {
  return getTokens(FreedomLessLessParser::ID);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::ID(size_t i) {
  return getToken(FreedomLessLessParser::ID, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::ASSIGN() {
  return getTokens(FreedomLessLessParser::ASSIGN);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::ASSIGN(size_t i) {
  return getToken(FreedomLessLessParser::ASSIGN, i);
}

std::vector<FreedomLessLessParser::Valued_expression_defContext *> FreedomLessLessParser::Attribute_defContext::valued_expression_def() {
  return getRuleContexts<FreedomLessLessParser::Valued_expression_defContext>();
}

FreedomLessLessParser::Valued_expression_defContext* FreedomLessLessParser::Attribute_defContext::valued_expression_def(size_t i) {
  return getRuleContext<FreedomLessLessParser::Valued_expression_defContext>(i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::COMMA() {
  return getTokens(FreedomLessLessParser::COMMA);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::COMMA(size_t i) {
  return getToken(FreedomLessLessParser::COMMA, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::OPEN_BRAK() {
  return getTokens(FreedomLessLessParser::OPEN_BRAK);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::OPEN_BRAK(size_t i) {
  return getToken(FreedomLessLessParser::OPEN_BRAK, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::INT() {
  return getTokens(FreedomLessLessParser::INT);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::INT(size_t i) {
  return getToken(FreedomLessLessParser::INT, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::CLOSE_BRAK() {
  return getTokens(FreedomLessLessParser::CLOSE_BRAK);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::CLOSE_BRAK(size_t i) {
  return getToken(FreedomLessLessParser::CLOSE_BRAK, i);
}

std::vector<tree::TerminalNode *> FreedomLessLessParser::Attribute_defContext::MULT() {
  return getTokens(FreedomLessLessParser::MULT);
}

tree::TerminalNode* FreedomLessLessParser::Attribute_defContext::MULT(size_t i) {
  return getToken(FreedomLessLessParser::MULT, i);
}


size_t FreedomLessLessParser::Attribute_defContext::getRuleIndex() const {
  return FreedomLessLessParser::RuleAttribute_def;
}

void FreedomLessLessParser::Attribute_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute_def(this);
}

void FreedomLessLessParser::Attribute_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FreedomLessLessListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute_def(this);
}

FreedomLessLessParser::Attribute_defContext* FreedomLessLessParser::attribute_def() {
  Attribute_defContext *_localctx = _tracker.createInstance<Attribute_defContext>(_ctx, getState());
  enterRule(_localctx, 14, FreedomLessLessParser::RuleAttribute_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(194);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(119);
      type_def();
      setState(120);
      match(FreedomLessLessParser::ID);
      setState(123);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FreedomLessLessParser::ASSIGN) {
        setState(121);
        match(FreedomLessLessParser::ASSIGN);
        setState(122);
        valued_expression_def();
      }
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == FreedomLessLessParser::COMMA) {
        setState(125);
        match(FreedomLessLessParser::COMMA);
        setState(126);
        match(FreedomLessLessParser::ID);
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FreedomLessLessParser::ASSIGN) {
          setState(127);
          match(FreedomLessLessParser::ASSIGN);
          setState(128);
          valued_expression_def();
        }
        setState(135);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(136);
      type_def();
      setState(137);
      match(FreedomLessLessParser::ID);
      setState(141); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(138);
        match(FreedomLessLessParser::OPEN_BRAK);
        setState(139);
        match(FreedomLessLessParser::INT);
        setState(140);
        match(FreedomLessLessParser::CLOSE_BRAK);
        setState(143); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == FreedomLessLessParser::OPEN_BRAK);
      setState(147);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FreedomLessLessParser::ASSIGN) {
        setState(145);
        match(FreedomLessLessParser::ASSIGN);
        setState(146);
        valued_expression_def();
      }
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == FreedomLessLessParser::COMMA) {
        setState(149);
        match(FreedomLessLessParser::COMMA);
        setState(150);
        match(FreedomLessLessParser::ID);
        setState(154); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(151);
          match(FreedomLessLessParser::OPEN_BRAK);
          setState(152);
          match(FreedomLessLessParser::INT);
          setState(153);
          match(FreedomLessLessParser::CLOSE_BRAK);
          setState(156); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == FreedomLessLessParser::OPEN_BRAK);
        setState(160);
        _errHandler->sync(this);
